--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -114,6 +114,8 @@ div {
 
 .lobsterfont{
     font-family: 'Lobster', cursive;
+    font-size: 20px;
+    text-align: center;
 }
 
 #containerOp{
@@ -125,21 +127,9 @@ div {
     margin-left: 25%;
     margin-right: 5px;
 }
-#container {
-    border-radius: 5px;
-    float: left;
-    text-align: justify;
-    padding: 20px;
-    width: 755px;
-    background-color: #f2f2f2;
-    margin-left: 25%;
-    margin-right: 5px;
-
-}
 
 #site{
-    min-height: 1200px;
-    resize: none;
+    min-height: 980px;
 }
 
 h1{
